# uwuifyy

./: .gitattributes  Cargo.toml  HOW.md  LICENSE  README.md  README.uwu.md  expanded.rs  infile.txt  outfile.txt
.github/workflows/: build.yml  ci.yml  deploy.yml
examples/: tiktok_app_reviews.csv  tokyo-2020-olympics-tweets.csv
examples/uwu/: uwu-tiktok_app_reviews.csv  uwu-tokyo-2020-olympics-tweets.csv
scripts/: build.bash  test.bash
src/: constants.rs  io.rs  lib.rs  main.rs  progress_bar.rs  seeder.rs  test.txt  uwuify.rs
src/uwuify/: io.rs  progress_bar.rs  seeder.rs
