[package]
name = "uwuifyy"
version = "0.3.0"
edition = "2021"
authors = ["Goudham Suresh <sgoudham@gmail.com>"]
description = "A robust, customizable, blazingly-fast, efficient and easy-to-use command line application to uwu'ify your text!"
license = "MIT"
readme = "README.md"
repository = "https://github.com/sgoudham/uwuifyy"
keywords = ["cli", "uwu", "owo", "uwuify", "anime"]
categories = ["command-line-utilities"]
exclude = [
  "examples/the-complete-works-of-william-shakespeare.txt",
  "examples/tiktok_app_reviews.csv",
  "examples/tokyo-2020-olympics-tweets.csv",
  "examples/uwu/**",
  ".github/**",
  "scripts/**",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "uwuifyy"

[dependencies]
clap = "3.0.13"
rand = "0.8.4"
indicatif = "0.17.1"
linkify = "0.8.0"
rand_xoshiro = "0.6.0"
ahash = "0.7.6"
memmap = "0.7.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev]
overflow-checks = false

[profile.bench]
lto = "fat"
codegen-units = 1

[features]
bench = []